third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/init/lifetime_violated.stderr
error[E0597]: `val` does not live long enough
  --> tests/ui/compile-fail/init/lifetime_violated.rs:30:24
   |
29 |         let val = 42;
   |             --- binding `val` declared here
30 |         foo = Foo::new(&val);
   |                        ^^^^ borrowed value does not live long enough
31 |     }
   |     - `val` dropped here while still borrowed
32 |     let bar = Box::init(Bar::new(foo));
   |                                  --- borrow later used here
